Fix incorrect highlight on narrow screens

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,7 +6,7 @@ $minWidth: 15rem;
 $twoColumnWidth: 46em;
 $threeColumnWidth: 98em;
 $navItemHeight: $baseline * 2;
-$navItems: 8;
+$navItems: 7;
 
 $wideLayoutMin: 40rem;
 $minFullMenuHeight: $navItemHeight * $navItems + 2rem;
@@ -74,7 +74,8 @@ nav {
   opacity: 1;
 }
 
-#nav-highlight[data-position="0"] {
+#nav-highlight[data-target=""],
+#nav-highlight[data-target="top"] {
   opacity: 0;
 }
 
